--- a/index.html
+++ b/index.html
@@ -6,19 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="mediaquery/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <main>
         <section id="login">
             <div id="imagem">
-
+                <!--aqui vai a imgagem nas CSS-->
             </div>
 
             <div id="formulario">
                 <h1>Login</h1>
-                <p>Seja Bem vido(a) novamento. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
-                <form action="login.php" method="post">
-                    
+                <p>Seja Bem vindo(a) novamento. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="campo">
+                        <span class="material-symbols-outlined"> person</span>
+                        <input type="email" name="login" id="ilogin" placeholder="your e-mail adress" autocomplete="email" required maxlength="50">
+                        <label for="ilogin">Login</label>
+                        
+                    </div>
+                    <div class="campo">
+                        <span class="material-symbols-outlined"> vpn_key</span>
+                        <input type="password" name="senha" id="isenha" placeholder="your password" autocomplete="current-password" required minlength="8" maxlength="12">
+                        <label for="isenha">Senha</label>
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html">Esqueci a senha <span class="material-symbols-outlined">
+                        mail
+                        </span></a>
                 </form>
 
             </div>
